--- a/Screwdriver.html
+++ b/Screwdriver.html
@@ -37,11 +37,11 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="index.html#hero"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
+        <li><a href="index.html#hero" ><i class="bi bi-house navicon"></i><span>Home</span></a></li>
         <li><a href="index.html#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
-        <li><a href="index.html#skills"><i class="bi bi-file-earmark-text navicon"></i><span>Skills</span></a></li>
-        <li><a href="index.html#resume"><i class="bi bi-images navicon"></i><span>Resume</span></a></li>
-        <li><a href="index.html#portfolio"><i class="bi bi-hdd-stack navicon"></i><span>Portfolio</span></a></li>
+        <li><a href="index.html#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
+        <li><a href="index.html#skills"><i class="bi bi-hdd-stack navicon"></i><span>Skills</span></a></li>
+        <li><a href="index.html#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
         <li><a href="index.html#achievements"><i class="bi bi-trophy navicon"></i><span>Achievements</span></a></li>
       </ul>
     </nav>
@@ -159,7 +159,7 @@
       <h3 class="sitename">Steven Lin</h3>
       <p>專注於工業自動化與 AI 開發的軟體工程師，擁有跨領域整合與實作經驗，致力於打造高效穩定的技術解決方案。 </p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://pda.104.com.tw/" target="_blank"><i class="bi bi-briefcase"></i></a>
+        <a href="https://pda.104.com.tw/profile/share/5fiPqPDswDROWzBzXIXjW2tHHPgUm3SL" target="_blank"><i class="bi bi-briefcase"></i></a>
         <a href="mailto:a21170000@gmail.com" target="_blank"><i class="bi bi-envelope"></i></a>
       </div>
       <div class="container">
